# 6561

./: .clang-format  CMakeLists.txt  README.md
benchmarks/: BoardBenchmark.cc  CMakeLists.txt
player/: Board.cc  Board.h  CMakeLists.txt  Common.h  Competition.cc  Competition.h  Configuration.cc  Configuration.h  ExpectMaxStrategy.cc  HumanStrategy.cc  IO.cc  IO.h  RNG.cc  RNG.h  RandomStrategy.cc  Strategy.h  StrategyFactory.cc  StrategyFactory.h  TTable.cc  TTable.h  Timer.cc  Timer.h  main.cc
tests/: BoardTest.cc  CMakeLists.txt
tools/: beautify.sh  optimize-weights.py
